<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/timerFrag">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:id="@+id/BTstart"
            android:layout_marginTop="62dp" android:layout_below="@+id/timer" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            android:text="@string/timerVal"
            android:id="@+id/timer" android:layout_centerHorizontal="true"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/best"
            android:id="@+id/best" android:layout_below="@+id/BTstart" android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/worst"
            android:id="@+id/worst" android:layout_below="@+id/best" android:layout_alignLeft="@+id/best"
            android:layout_marginTop="66dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/average"
            android:id="@+id/average"
            android:layout_marginTop="67dp" android:layout_below="@+id/worst" android:layout_alignParentLeft="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp" android:layout_below="@+id/best" android:layout_alignParentLeft="true"
            android:background="#ffb9b9b9" android:weightSum="1" android:baselineAligned="false">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:background="#ff69ff09" android:layout_weight="0.6"
                android:id="@+id/barBest">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp" android:layout_below="@+id/worst" android:layout_alignParentLeft="true"
            android:background="#ffb9b9b9" android:weightSum="1" android:baselineAligned="false">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:background="#ffff000c" android:layout_weight="0.5"
                android:id="@+id/barWorst">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp" android:layout_below="@+id/average" android:layout_alignParentLeft="true"
            android:background="#ffb9b9b9" android:id="@+id/linearLayout" android:weightSum="1"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:layout_weight="0.65" android:baselineAligned="false"
                android:background="#ffffd000" android:id="@+id/barAve">
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current"
            android:id="@+id/Current" android:layout_below="@+id/linearLayout" android:layout_alignParentLeft="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp" android:layout_below="@+id/Current" android:layout_alignParentLeft="true"
            android:background="#ffb9b9b9" android:weightSum="1" android:baselineAligned="false">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" android:background="#ff0003ff" android:layout_weight="0.545"
                android:id="@+id/barCurr">
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>